// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghReleaseChangelog valid 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "rcp",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "## @rcp/abc

### Bug Fixes

*   title #123 should remove container firstly @imcuttle ([8dfcc84](https://github.com/imcuttle/rcp/commit/8dfcc84))

### Features

*   add c.preventfastop ([44bf84f](https://github.com/imcuttle/rcp/commit/44bf84f))

### Performance Improvements

*   set defaultLanguage to defaultProps ([cf01859](https://github.com/imcuttle/rcp/commit/cf01859))

### BREAKING CHANGES

*   use es6 instead of es5
*   remove global option

**Full Changelog**: [2.0.0](https://github.com/imcuttle/rcp/commits/2.0.0)",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "imcuttle",
      "prerelease": undefined,
      "repo": "rcp",
      "tag_name": "2.0.0",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelogMonorepo lerna 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)

#### b

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo pnpm 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)

#### b

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo same-version-root-changelog 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo workspaces 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)

#### b

Haha, :smile:

**Full Changelog**: [1.0.0](https://github.com/o/a/commits/1.0.0)",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;
